公開用設定

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 import { Icon } from "astro-icon/components";
 
 const currentYear = new Date().getFullYear();
-const email = "contact@example.com";
+const email = "contact@sasnews.dev";
 const githubRepoUrl = "https://github.com/sas-news/homepage";
 ---
 
