--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,12 @@
 ---
 import "@styles/global.css";
+
+const {
+    title = "SAS新聞 | Official Site",
+    description = "SAS新聞の公式サイトです。私の制作物やスキル、SNSリンクなどを掲載しています。",
+} = Astro.props;
+const permalink = Astro.url.href;
+const ogpImage = new URL("/ogp.png", Astro.site).href;
 ---
 
 <html lang="ja">
@@ -7,20 +14,31 @@ import "@styles/global.css";
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
 
-        <!-- あとで外す -->
-        <meta name="robots" content="noindex, nofollow" />
-
         <link rel="sitemap" href="/sitemap-index.xml" />
 
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <link rel="shortcut icon" href="/favicon.ico" />
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
         <meta name="generator" content={Astro.generator} />
-        <title>SAS新聞 | Official Site</title>
-        <meta
-            name="description"
-            content="SAS新聞の公式サイトです。私の制作物やスキル、SNSリンクなどを紹介しています。"
-        />
+        <title>{title}</title>
+        <meta name="description" content={description} />
+
+        <!-- OGP -->
+        <meta property="og:title" content={title} />
+        <meta property="og:description" content={description} />
+        <meta property="og:url" content={permalink} />
+        <meta property="og:image" content={ogpImage} />
+        <meta property="og:image:width" content="1200" />
+        <meta property="og:image:height" content="630" />
+        <meta property="og:image:alt" content="SAS新聞のロゴ画像" />
+        <meta property="og:locale" content="ja_JP" />
+        <meta property="og:type" content="website" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content={title} />
+        <meta name="twitter:description" content={description} />
+        <meta name="twitter:image" content={ogpImage} />
+        <meta name="twitter:site" content="@sas_shinbun" />
+        <meta name="twitter:creator" content="@sas_shinbun" />
     </head>
 
     <body>
