--- a/src/components/Showcase.astro
+++ b/src/components/Showcase.astro
@@ -186,7 +186,7 @@ const showcases = await Promise.all(
         margin-top: 1rem;
     }
     .tag {
-        --tag-color: #1256af;
+        --tag-color: #007acc;
         padding: 0.25rem 0.5rem;
         color: var(--tag-color);
         border: 1px solid var(--tag-color);
@@ -222,7 +222,7 @@ const showcases = await Promise.all(
             }
         }
         .tag {
-            --tag-color: #9feaf9;
+            --tag-color: #77B7EB;
         }
         .year {
             color: #aaa;
