背景画像のサイズを変更

--- a/src/components/Top.astro
+++ b/src/components/Top.astro
@@ -13,12 +13,10 @@ import Back from "@img/background.png";
     <Image
         src={Back}
         alt="背景用画像"
-        width={600}
-        height={600}
+        width={200}
+        height={200}
         class="blur-bg"
         aria-hidden="true"
-        loading="eager"
-        fetchpriority="high"
     />
     <div class="title-section">
         <Image src={Logo} alt="SAS新聞ロゴ" width={150} height={150} class="logo" />
@@ -143,7 +141,7 @@ import Back from "@img/background.png";
     }
     @media (prefers-color-scheme: dark) {
         #load-time-container {
-            background-color: #4D7626;
+            background-color: #4d7626;
             color: #eee;
         }
         .top .blur-bg {
